# sbkafka

./: Cargo.toml  README.md
src/: consume.rs  lib.rs
src/crates/: kafka.rs
