[package]
name = "sbkafka"
version = "0.1.0"
edition = "2021"
description = "Easy consumption of rdkafka"
homepage = "https://github.com/robbestad/sbkafka"
license = "MIT"
readme = "README.md"

[dependencies]
rdkafka = { version = "0.28.0", features = ["cmake-build"] }
tokio = { version = "1.1.0", features = ["macros", "rt-multi-thread", "time"] }
clap = {version = "3.1.1", features = ["env"] }
log = "0.4.13"
env_logger="0.9.0"
anyhow = "1.0.56"

